--- a/index.css
+++ b/index.css
@@ -46,6 +46,7 @@ body{
     list-style: none;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .word-display .letter{
@@ -86,6 +87,11 @@ body{
     margin-top: 40px;
 }
 
+.keyboard button[disabled] {
+    opacity: 0.6;
+    pointer-events: none;
+}
+
 :where(.game-modal, .keyboard) button {
     color: #fff;
     font-size: 1rem;
@@ -112,10 +118,20 @@ body{
     top: 0;
     width: 100%;
     height: 100%;
-    display: none;
+    display: flex;
+    opacity: 0;
+    z-index: 999;
+    padding: 0 10px;
+    pointer-events: none;
     align-items: center;
     justify-content: center;
     background: rgba(0, 0, 0, 0.6);
+    transition: opacity 0.4s ease;
+}
+
+.game-modal.show{
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .game-modal .content{
