--- a/easyLevel/index.css
+++ b/easyLevel/index.css
@@ -10,14 +10,36 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     padding: 0 10px;
     min-height: 100vh;
-    background: #5e63ba;
+    background: #146C94;
 }
 
-/* img{
-    width: 400px;
-} */
+.level{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 100px;
+    font-size: 1.90rem;
+}
+
+.back{
+    width: 100%;
+    height: 100%;
+    margin-left: 1rem;
+}
+
+.back a{
+    color: black;
+    text-decoration: none;
+}
+
+.back svg{
+    width: 4rem;
+}
 
 .container{
     width: 850px;
@@ -98,7 +120,7 @@ body{
     font-weight: 600;
     cursor: pointer;
     outline: none;
-    background: #5e63ba;
+    background: #19A7CE;
     border-radius: 4px;
     text-transform: uppercase;
     border: none;
