--- a/first.css
+++ b/first.css
@@ -11,7 +11,7 @@ body{
     justify-content: center;
     align-items: center;
     /* background-color: #000000; */
-    background-image: url(https://i.postimg.cc/FzbQhkqW/HANGMAN.png);
+    background-image: url(https://i.ibb.co/DwB8kt8/360-F-262244457-ifa-Hu-Rxphif4md99ql-WG0x-Kg-Wly4-J4js.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
